# Pearl_Lolo_AI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  semgrep.yml
.semgrep/: axios-guardrails.yml
api/: server.py
config/: config.yaml
core/: cache.py  contracts.py  logs.py  router.py  settings.py  sudoku.py  utils.py
data/: README.md  sample-kuwait.md
pearl-lolo-ai-agent/: README.md  config.yaml  main.py  requirements.txt  run.bat  run.sh  setup.py
pearl-lolo-ai-agent/core/: __init__.py  ai_engine.py  bilingual_processor.py  config_manager.py  hrm_client.py  personality_engine.py  rag_system.py  search_tool.py
pearl-lolo-ai-agent/data/personalities/: arabic_personality.yaml  lolo_personality.yaml
pearl-lolo-ai-agent/docs/: hrm_integration_plan.md  hrm_service_setup.md
pearl-lolo-ai-agent/models/: __init__.py  download_models.py  model_manager.py
pearl-lolo-ai-agent/scripts/: install_mac.sh  install_ubuntu.sh  setup_environment.py  setup_hrm.sh
pearl-lolo-ai-agent/static/css/: glassmorphism.css
pearl-lolo-ai-agent/ui/: __init__.py  arabic_support.py  components.py  glassmorphism_theme.py
providers/: hrm.py  llm.py  llm_openai.py  rag.py  stt.py  tts.py  websearch.py
scripts/: build_indexes.py  pull_models.py  run_desktop.py
src/http/: axiosClient.ts  retryPolicy.ts  types.ts
tests/: test_api.py  test_hrm_validator.py  test_rag.py  test_router.py  test_utils_retry.py
ui/: main.py  theme.qss  widgets.py
