[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "lolo"
version = "0.1.0"
description = "LoLo: Local-first aide with LLM, RAG, HRM, STT/TTS and a small desktop UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.6",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "chromadb>=0.5.5",
  "rank-bm25>=0.2.2",
  "PySide6>=6.7.2",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "black>=24.8.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
